--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://raat97:raat9797@cluster0.suohg.mongodb.net/book-my-show?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://raat97:#####@cluster0.suohg.mongodb.net/book-my-show?retryWrites=true&w=majority
